--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1>Magyarország vízei</h1>
     </header>
-    <nav class="navbar navbar-expand-lg"  style="background-color: #06435f;" data-bs-theme="dark">
+    <nav class="navbar navbar-expand-lg" data-bs-theme="dark">
         <div class="container-fluid">
           <a class="navbar-brand">SJW</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav">
@@ -68,14 +68,13 @@
         <div class="row">
             <div class="col">
                 <table class="table">
-                    <caption</caption>
                     <thead>
                         <tr>
-                            <th colspan="2" class="align-middle">Hévízi-tó növényvilága</th>
+                            <th colspan="2" id="table-title">Hévízi-tó növényvilága</th>
                         </tr>
                         <tr>
-                            <th>Név</th>
-                            <th>Leírás</th>
+                            <th id="table-rows">Név</th>
+                            <th id="table-rows">Leírás</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -84,6 +83,46 @@
                             <td>A baktériumok a tó élővilágának domináns elemei, a gyógyhatással is kapcsolatban állnak.
                                 Jellemző kékmoszatok a fonalas kékalgák. Karakterisztikus jelenség, hogy a kékmoszatok fele melegvízi, stenoterm faj. Két melegvizeket kedvelő kékalga Magyarországon csak itt fordul elő.
                                 A bakteriális bevonatok a Hévízi-tó jellegzetes képződményei, falát 1,5 m mélységtől egészen a forrásbarlang szájáig főként fonalas kénbaktériumok borítják. Ezek, más kénbaktériumokkal együtt fontos szerepet játszanak a tó kén anyagcseréjében.</td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Zöldalgák:
+                            </td>
+                            <td>
+                                A zöldalgák az egész tóban előfordulnak, kivéve a forrásbarlang környékét.
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Indiai vörös tündérrózsa:
+                            </td>
+                            <td>
+                                A tündérrózsa védett növénye a Hévízi-tónak, a növényt bolygatni, virágát leszakítani tilos!
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Fehér tündérrózsa:
+                            </td>
+                            <td>
+                                A tóból már kipusztult, de még nagy számban tenyészik az üzemvíz-csatornában.
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Tengermelléki káka:
+                            </td>
+                            <td>
+                                A lefolyó szélén a náddal együtt sűrű állományt képez.
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Mocsárciprus:
+                            </td>
+                            <td>
+                                Hévízi állománya jelentős, több utat szegélyez.
+                            </td>
                         </tr>
                     </tbody>
                 </table>
